Update files formatting and linting
